--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,8 @@
 .title_principal{
   color:white;
   text-align: center;
-  font-size: 3em;
+  font-size: 4em;
+  margin-bottom: 1em;
  }
 
 
@@ -32,14 +33,101 @@
   color:white;
   text-align: center;
   border-left: 30%;
+  margin-bottom: 4em;
+  font-size: 2ch;
 }
 
 .body{
-  border-left: 80px solid #16181A;
-  border-right: 80px solid #16181A;
+  border-left: 160px solid #16181A;
+  border-right: 160px solid #16181A;
 }
 
 
-settings_down{
-  border-bottom: 30em;
+.settings_down{
+  margin-top: 4em;
+  margin-bottom: 6em;
+}
+
+.text_sets{
+  color:white;
+
+}
+
+
+
+.image_side{
+  max-width: 700px;
+}
+
+.space{
+  margin-bottom: 4em;
+}
+
+.under{
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 24px;
+  gap: 16px;
+  width: 378.67px;
+  height: 298px;
+  background:linear-gradient(to right, #DEE07D , #66bc9f);
+  border-radius: 10px;
+  flex: none;
+  order: 2;
+  flex-grow: 1;
+}
+
+.back{
+  position: absolute;
+width: 273px;
+height: 281px;
+left: calc(50% - 273px/2 - 104.5px);
+top: calc(50% - 281px/2 + 29.5px);
+
+background: #b0a23f;
+opacity: 0.40;
+filter: blur(80px);
+position: absolute;
+width: 410px;
+height: 417px;
+left: calc(50% - 410px/2 + 25px);
+top: calc(50% - 417px/2 - 0.5px);
+
+background: #0d4b7d;
+opacity: 0.40;
+filter: blur(80px);
+}
+
+.marg{
+  margin-top: 1em;
+  text-align: justify;
+}
+
+.footer_down{
+
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 160%;
+  color: #FFFFFF;
+  background: #FFFFFF;
+}
+
+.bord{
+  margin-left: 60em;
+}
+
+.title_footer{
+  margin-left: 10em;
+}
+
+.down_space{
+  border-bottom: 2em;
+}
+
+.video{
+  align-items: center;
+  align-self: center;
 }
